2010-06-26  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:                          Bumped the version number to 5.1.
	* *.txt:
	* ../../examples/tablelist/*.tcl:

	* scripts/tablelistBind.tcl:   Fixed a few bugs and typos.
	* scripts/tablelistSort.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* doc/tablelist.html:       Updated the documentation.
	* doc/tablelistWidget.html:

2010-06-05  Csaba Nemethi <csaba.nemethi@t-online.de>

	* README.txt:         Small corrections.
	* doc/tablelist.html:

2010-06-05  Csaba Nemethi <csaba.nemethi@t-online.de>

	* README.txt:         Slightly extended.
	* doc/tablelist.html:

2010-06-05  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelist.html: Corrected a typo.

2010-06-02  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:               Fixed a bug related to embedded windows.
	* scripts/tablelistUtil.tcl:

2010-05-22  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:              Slightly extended.
	* doc/tablelistWidget.html:

	* scripts/tablelistWidget.tcl: Fixed a bug in the insertlist subcommand.

2010-05-15  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistImages.tcl: Removed tree style "plastik";
	* scripts/tablelistThemes.tcl: added tree style "klearlooks".
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

	* doc/tablelistWidget.html: Updated to reflect the changes.

	* doc/plastik.png: Removed screenshot.

	* doc/klearlooks.png: Added screenshot.

2010-05-09  Csaba Nemethi <csaba.nemethi@t-online.de>

	* doc/tablelistWidget.html: Added two performance-related remarks.

2010-05-08  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl: Bumped the version number to 5.0.
	* *.txt:

	* scripts/*.tcl: Renamed tablelistBitmaps.tcl to tablelistImages.tcl;
	  lots of new features (see CHANGES.txt: What is new in Tablelist 5.0?).

	* scripts/tclIndex: Newly generated.

	* doc/tablelist.html:       Updated to reflect the new features.